Fixed scrollbar bug

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -43,18 +43,13 @@ h3 {
   width: 30px;
   background-color: white;
   border-radius: 50%;
-  display: inline-block;
   float: left;
   margin-right: 10px;
   margin-top: -4px;
-  z-index: 0;
 }
 
 #envelopeIcon {
-	float: left;
-	position: relative;
 	margin-right: 30px;
-	z-index: 1;
 	color: #29a329;
 	padding-left: 7px;
 	padding-top: 7px;
@@ -65,22 +60,13 @@ h3 {
 	margin-right: 10px;
 }
 
-.sticky {
-  position: fixed;
-  top: 0;
-  width: 100%
-}
-
 #profile {
 	width: 70%;
-	margin-right: -20px;
 	position: absolute;
-	z-index: -1;
 	right: 0;
 }
 
 #waveform {
-	margin-top: 100px;
 	position: relative;
 	margin-left: 20px;
 	padding-top: 170px;
